# GLEWCore

./: CMakeLists.txt  README.md  example.cpp
inc/GLEWCore/: eglew.h  glxew.h
src/: glew.c
